--- a/contact-us.html
+++ b/contact-us.html
@@ -173,7 +173,7 @@
 		    	<p>Help us understand about your taxi need and We will suggest you best car for your travel need at cheapest price guaranteed. Provide your information below and our travel expert will call you soon.</p>
 		    	<p><strong>Address: </strong>T-318, Second Floor, Baljit Nagar Near Dimple Public School Delhi-110008 </p>
 		    	<p><strong>Phone Number:  </strong><a href="tel:+91-8130336867">+91-8130336867</a></p>
-		    	<p><Strong>Email: </Strong><a href="mailto:info@example.in">info@example.in</a></p>
+		    	<p><Strong>Email: </Strong><a href="mailto:info@example.in">info@hsrtravel.co</a></p>
 		    	
 			</div>
 	    </div>
