--- a/Urbania-12seat.html
+++ b/Urbania-12seat.html
@@ -545,17 +545,20 @@
                         </ul>
                     </div>
                 </div> -->
-
-                <h1 class="title h-left">Tempo Traveller 9 Seater on Rent</h1>
-<p class="para">The Tempo Traveller  Seater is ideal for comfortable, safe, and spacious group journeys. Perfect for family vacations, office trips, sightseeing tours, and pilgrimages, this luxury mini-van provides plush seating, modern amenities, and unmatched reliability for Indian roads.</p>
-<p class="para">With professional chauffeurs, sanitized interiors, and regular maintenance, our 9-seater tempo traveller ensures a smooth and memorable travel experience. The vehicle offers ample luggage space, versatile adaptability, and advanced safety features to suit all travel needs in Delhi NCR and beyond.</p>
+<h1 class="title h-left">Force Urbania 12 Seater on Rent</h1>
+<p class="para">The Force Urbania 12 Seater is a premium luxury tempo traveller widely used for comfortable group travel. Known for its spacious interiors, plush Maharaja seats, and advanced air-conditioning, this vehicle is perfect for family tours, corporate outings, weddings, and outstation trips across Indian roads.</p>
+<p class="para">Our Force Urbania vans come sanitized and well-maintained, driven by experienced chauffeurs to guarantee a safe and enjoyable journey. The van provides ample legroom, charging ports, LED lighting, and ample luggage space to suit every travel need in Delhi NCR and beyond.</p>
 <div class="col-12 col-lg-6 col-md-6">
-    <img src="img/t2.jpeg" width="70%" alt="Tempo Traveller 9 Seater"
+    <img src="img/a1.jpg" width="100%" alt="Force Urbania 12 Seater"
          class="img-responsive center-block mb20">
 </div>
-<p class="para">At HSR Travel Delhi, Tempo Traveller  Seater is available at competitive per-kilometer rates for stress-free, budget-friendly travel. Whether for group tours, family events, corporate outings, or holiday trips, this vehicle delivers the best comfort and service in its class.</p>
+<div class="col-12 col-lg-6 col-md-6">
+    <img src="img/a2.jpg" width="40%" alt="Force Urbania 12 Seater"
+         class="img-responsive center-block mb20">
+</div>
+<p class="para">At HSR Travel Delhi, we offer competitive and transparent rental rates for the Force Urbania 12 Seater, ensuring a hassle-free booking experience with utmost comfort and safety for your group travels.</p>
 <h1 class="title h-center">
-    <center>Features Of Hiring Tempo Traveller  Seater:</center>
+    <center>Features Of Hiring Force Urbania 12 Seater:</center>
 </h1>
 <style>
     {
@@ -574,54 +577,50 @@
 <div class="row">
     <div class="column" style="background-color: ;">
         <ul class="disc">
-            <li>9-seater luxury Maharaja seats</li>
-            <li>Digital air-conditioning control</li>
-            <li>LED ambient lights & music system</li>
-            <li>Charging points for all passengers</li>
-            <li>Large panoramic windows</li>
-            <li>Ample luggage space</li>
+            <li>12-seater luxury Maharaja style seats</li>
+            <li>Fully automatic climate control Air Conditioning</li>
+            <li>High-quality LED interior ambiance lighting</li>
+            <li>Chargers/USB ports for all passengers</li>
+            <li>Large panoramic windows for sightseeing</li>
+            <li>Spacious and secure luggage storage</li>
         </ul>
     </div>
     <div class="column" style="background-color: ;">
         <ul class="disc">
-            <li>Full safety seat belts</li>
-            <li>First aid box & fire extinguisher</li>
-            <li>Sanitized, well-maintained vehicle</li>
-            <li>Experienced chauffeur</li>
-            <li>No insurance fees</li>
+            <li>Full safety seat belts for every passenger</li>
+            <li>First aid kit and fire extinguisher onboard</li>
+            <li>Sanitized and regularly maintained vehicle</li>
+            <li>Professional, trained, and courteous chauffeurs</li>
+            <li>No hidden charges or insurance fees</li>
         </ul>
     </div>
 </div>
 <h1 class="title h-center">
-    <center>Terms & conditions for booking:</center>
+    <center>Terms & Conditions for Booking</center>
 </h1>
 <div class="row">
     <div class="column" style="background-color: ;">
-        <h3>Tempo Traveller  Seater Charges for Delhi City –</h3>
+        <h3>Force Urbania 12 Seater Charges for Delhi City –</h3>
         <ul class="disc">
-            <li>A/C & Non A/C @ ₹2,800/day</li>
+            <li>Rental starts at ₹3,500/day (A/C & Non A/C)</li>
             <li>Time and Distance calculated from base point Saket</li>
-            <li>After 80 kilometers: ₹24/KM, after 8 hours: ₹200/hour</li>
-            <li>Minimum billing: 250 km/day</li>
-            <li>Toll tax, parking, state tax charged as actuals</li>
-            <li>Above price is only for Delhi circle</li>
+            <li>After 80km: ₹28/KM, after 8 hours: ₹250/hour extra charges</li>
+            <li>Minimum billing: 250 km/day for outstation trips</li>
+            <li>Toll tax, parking, and state tax charged as actuals</li>
+            <li>Prices applicable only within Delhi circle</li>
         </ul>
     </div>
     <div class="column" style="background-color: ;">
-        <h3>Tempo Traveller  Seater Charges for out of Delhi –</h3>
+        <h3>Force Urbania 12 Seater Charges for Out of Delhi –</h3>
         <ul class="disc">
-            <li>A/C & Non A/C @ ₹27/KM</li>
-            <li>Minimum kilometer counted per day: 250 km/day</li>
-            <li>Time and kilometers calculated Delhi to Delhi</li>
-            <li>Driver allowance ₹500/day</li>
+            <li>A/C & Non A/C @ ₹33/KM</li>
+            <li>Minimum kilometers counted per day: 250 km/day</li>
+            <li>Time and kilometers counted Delhi to Delhi</li>
+            <li>Driver allowance ₹600/day</li>
             <li>Toll tax, state tax, parking as actuals</li>
         </ul>
     </div>
 </div>
-
-
-
-                
 
 
 
