--- a/Urbania-17seat .html
+++ b/Urbania-17seat .html
@@ -546,16 +546,20 @@
                     </div>
                 </div> -->
 
-                <h1 class="title h-left">Tempo Traveller 9 Seater on Rent</h1>
-<p class="para">The Tempo Traveller  Seater is ideal for comfortable, safe, and spacious group journeys. Perfect for family vacations, office trips, sightseeing tours, and pilgrimages, this luxury mini-van provides plush seating, modern amenities, and unmatched reliability for Indian roads.</p>
-<p class="para">With professional chauffeurs, sanitized interiors, and regular maintenance, our 9-seater tempo traveller ensures a smooth and memorable travel experience. The vehicle offers ample luggage space, versatile adaptability, and advanced safety features to suit all travel needs in Delhi NCR and beyond.</p>
+                <h1 class="title h-left">Force Urbania 17 Seater on Rent</h1>
+<p class="para">The Force Urbania 17 Seater offers a premium travelling experience with spacious interiors and luxury features. Perfect for mid-size group travel including family trips, corporate tours, weddings, and outstation journeys on Indian roads.</p>
+<p class="para">Our 17 Seater Urbania is sanitized regularly and maintained to the highest standards. It features comfortable pushback Maharaja seats, advanced climate control, and is driven by professional chauffeurs to ensure your safety and comfort.</p>
 <div class="col-12 col-lg-6 col-md-6">
-    <img src="img/t2.jpeg" width="70%" alt="Tempo Traveller 9 Seater"
+    <img src="img/a4.jpeg" width="70%" alt="Force Urbania 17 Seater"
          class="img-responsive center-block mb20">
 </div>
-<p class="para">At HSR Travel Delhi, Tempo Traveller  Seater is available at competitive per-kilometer rates for stress-free, budget-friendly travel. Whether for group tours, family events, corporate outings, or holiday trips, this vehicle delivers the best comfort and service in its class.</p>
+<div class="col-12 col-lg-6 col-md-6">
+    <img src="img/a5.jpeg" width="55%" alt="Force Urbania 17 Seater"
+         class="img-responsive center-block mb20">
+</div>
+<p class="para">HSR Travel Delhi provides competitive pricing on the Force Urbania 17 Seater to make your group travel seamless and enjoyable.</p>
 <h1 class="title h-center">
-    <center>Features Of Hiring Tempo Traveller  Seater:</center>
+    <center>Features Of Hiring Force Urbania 17 Seater:</center>
 </h1>
 <style>
     {
@@ -574,55 +578,50 @@
 <div class="row">
     <div class="column" style="background-color: ;">
         <ul class="disc">
-            <li>9-seater luxury Maharaja seats</li>
-            <li>Digital air-conditioning control</li>
-            <li>LED ambient lights & music system</li>
-            <li>Charging points for all passengers</li>
+            <li>17-seater deluxe Maharaja seats</li>
+            <li>Automatic climate control air conditioning</li>
+            <li>LED interior lighting & entertainment system</li>
+            <li>USB charging ports for all passengers</li>
             <li>Large panoramic windows</li>
-            <li>Ample luggage space</li>
+            <li>Generous luggage space</li>
         </ul>
     </div>
     <div class="column" style="background-color: ;">
         <ul class="disc">
-            <li>Full safety seat belts</li>
-            <li>First aid box & fire extinguisher</li>
-            <li>Sanitized, well-maintained vehicle</li>
-            <li>Experienced chauffeur</li>
-            <li>No insurance fees</li>
+            <li>Seat belts for all passengers</li>
+            <li>First aid kit & fire extinguisher onboard</li>
+            <li>Sanitized, regularly serviced vehicle</li>
+            <li>Experienced, courteous professional chauffeurs</li>
+            <li>No hidden insurance costs</li>
         </ul>
     </div>
 </div>
 <h1 class="title h-center">
-    <center>Terms & conditions for booking:</center>
+    <center>Terms & Conditions for Booking</center>
 </h1>
 <div class="row">
     <div class="column" style="background-color: ;">
-        <h3>Tempo Traveller  Seater Charges for Delhi City –</h3>
+        <h3>Force Urbania 17 Seater Charges for Delhi City –</h3>
         <ul class="disc">
-            <li>A/C & Non A/C @ ₹2,800/day</li>
+            <li>₹3,800/day (A/C & Non A/C)</li>
             <li>Time and Distance calculated from base point Saket</li>
-            <li>After 80 kilometers: ₹24/KM, after 8 hours: ₹200/hour</li>
-            <li>Minimum billing: 250 km/day</li>
+            <li>After 80 km: ₹31/KM, after 8 hours: ₹270/hour</li>
+            <li>Minimum billing: 250 km/day for outstation</li>
             <li>Toll tax, parking, state tax charged as actuals</li>
-            <li>Above price is only for Delhi circle</li>
+            <li>Quotes valid for Delhi circle only</li>
         </ul>
     </div>
     <div class="column" style="background-color: ;">
-        <h3>Tempo Traveller  Seater Charges for out of Delhi –</h3>
+        <h3>Force Urbania 17 Seater Charges for Out of Delhi –</h3>
         <ul class="disc">
-            <li>A/C & Non A/C @ ₹27/KM</li>
-            <li>Minimum kilometer counted per day: 250 km/day</li>
-            <li>Time and kilometers calculated Delhi to Delhi</li>
-            <li>Driver allowance ₹500/day</li>
-            <li>Toll tax, state tax, parking as actuals</li>
+            <li>₹31/KM (A/C & Non A/C)</li>
+            <li>Minimum kilometers counted per day: 250 km</li>
+            <li>Time and kilometers counted Delhi to Delhi</li>
+            <li>Driver allowance ₹700/day</li>
+            <li>Toll tax, state tax, and parking charges as actuals</li>
         </ul>
     </div>
 </div>
-
-
-
-                
-
 
 
                 <div class="dc-carousel">
