--- a/bus-49seat.html
+++ b/bus-49seat.html
@@ -546,16 +546,21 @@
                     </div>
                 </div> -->
 
-                <h1 class="title h-left">Tempo Traveller 9 Seater on Rent</h1>
-<p class="para">The Tempo Traveller  Seater is ideal for comfortable, safe, and spacious group journeys. Perfect for family vacations, office trips, sightseeing tours, and pilgrimages, this luxury mini-van provides plush seating, modern amenities, and unmatched reliability for Indian roads.</p>
-<p class="para">With professional chauffeurs, sanitized interiors, and regular maintenance, our 9-seater tempo traveller ensures a smooth and memorable travel experience. The vehicle offers ample luggage space, versatile adaptability, and advanced safety features to suit all travel needs in Delhi NCR and beyond.</p>
+          <h1 class="title h-left">49 Seater Bus on Rent</h1>
+<p class="para">Our 49 Seater Bus is designed for very large groups, offering spacious and comfortable travel for corporate events, school excursions, weddings, and large group tours. Equipped with state-of-the-art amenities and safety features, it ensures a safe and pleasant journey.</p>
+<p class="para">The bus undergoes regular cleaning and maintenance and is driven by experienced chauffeurs committed to your safety and comfort. Suitable for both local and outstation travel within Delhi NCR and beyond.</p>
+<p class="para">Book our 49 Seater Bus for dependable and comfortable group transportation backed by professional service and well-trained drivers.</p>
+
 <div class="col-12 col-lg-6 col-md-6">
-    <img src="img/t2.jpeg" width="70%" alt="Tempo Traveller 9 Seater"
+    <img src="img/bus45.jpeg" width="100%" alt="49 Seater Bus"
          class="img-responsive center-block mb20">
 </div>
-<p class="para">At HSR Travel Delhi, Tempo Traveller  Seater is available at competitive per-kilometer rates for stress-free, budget-friendly travel. Whether for group tours, family events, corporate outings, or holiday trips, this vehicle delivers the best comfort and service in its class.</p>
+<div class="col-12 col-lg-6 col-md-6">
+    <img src="img/seat45.jpg" width="80%" alt="49 Seater Bus"
+         class="img-responsive center-block mb20">
+</div>
 <h1 class="title h-center">
-    <center>Features Of Hiring Tempo Traveller  Seater:</center>
+    Features Of Hiring a 49 Seater Bus:</center>
 </h1>
 <style>
     {
@@ -574,54 +579,38 @@
 <div class="row">
     <div class="column" style="background-color: ;">
         <ul class="disc">
-            <li>9-seater luxury Maharaja seats</li>
-            <li>Digital air-conditioning control</li>
-            <li>LED ambient lights & music system</li>
-            <li>Charging points for all passengers</li>
-            <li>Large panoramic windows</li>
-            <li>Ample luggage space</li>
+            <li>Cushioned seating for 49 passengers</li>
+            <li>Efficient air-conditioning and heating system</li>
+            <li>Large tinted windows with curtains/shades</li>
+            <li>Ample space for luggage</li>
+            <li>Advanced audio and video entertainment system</li>
         </ul>
     </div>
     <div class="column" style="background-color: ;">
         <ul class="disc">
-            <li>Full safety seat belts</li>
-            <li>First aid box & fire extinguisher</li>
-            <li>Sanitized, well-maintained vehicle</li>
-            <li>Experienced chauffeur</li>
-            <li>No insurance fees</li>
+            <li>Seat belts and safety provisions for all passengers</li>
+            <li>First aid kit and fire extinguisher onboard</li>
+            <li>Sanitized and regularly maintained vehicle</li>
+            <li>Professional and courteous chauffeurs</li>
+            <li>No hidden charges or insurance fees</li>
         </ul>
     </div>
 </div>
 <h1 class="title h-center">
-    <center>Terms & conditions for booking:</center>
+    enterer>Terms & Conditions for Booking</center>
 </h1>
 <div class="row">
     <div class="column" style="background-color: ;">
-        <h3>Tempo Traveller  Seater Charges for Delhi City –</h3>
+        <h3>General Booking Terms –</h3>
         <ul class="disc">
-            <li>A/C & Non A/C @ ₹2,800/day</li>
-            <li>Time and Distance calculated from base point Saket</li>
-            <li>After 80 kilometers: ₹24/KM, after 8 hours: ₹200/hour</li>
-            <li>Minimum billing: 250 km/day</li>
-            <li>Toll tax, parking, state tax charged as actuals</li>
-            <li>Above price is only for Delhi circle</li>
-        </ul>
-    </div>
-    <div class="column" style="background-color: ;">
-        <h3>Tempo Traveller  Seater Charges for out of Delhi –</h3>
-        <ul class="disc">
-            <li>A/C & Non A/C @ ₹27/KM</li>
-            <li>Minimum kilometer counted per day: 250 km/day</li>
-            <li>Time and kilometers calculated Delhi to Delhi</li>
-            <li>Driver allowance ₹500/day</li>
-            <li>Toll tax, state tax, parking as actuals</li>
+            <li>Minimum booking duration applies</li>
+            <li>Time and distance calculated from base point Saket</li>
+            <li>Toll tax, parking, and state tax charged as actuals</li>
+            <li>Driver allowance applicable as per trip requirements</li>
+            <li>Prices subject to availability and seasonal demand</li>
         </ul>
     </div>
 </div>
-
-
-
-                
 
 
 
