--- a/bus-55seat.html
+++ b/bus-55seat.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="no-padding">
                     <!-- Navbar -->
-                     <nav class="navbar navbar-default navbar-fixed-top" style="height:100px;">
+                    <nav class="navbar navbar-default navbar-fixed-top" style="height:100px;">
                         <div class="container">
                             <div class="navbar-header">
                                 <button type="button" data-target="#navbarCollapse" data-toggle="collapse"
@@ -545,17 +545,21 @@
                         </ul>
                     </div>
                 </div> -->
+<h1 class="title h-left">55 Seater Bus on Rent</h1>
+<p class="para">Our 55 Seater Bus is perfect for very large groups requiring spacious and comfortable travel. This bus is ideal for corporate events, school trips, weddings, and long-distance tours, equipped with modern amenities and safety features to ensure a smooth ride.</p>
+<p class="para">Thoroughly sanitized and well-maintained, the bus is operated by professional chauffeurs who prioritize passenger comfort and security. Suitable for both intracity and outstation trips within Delhi NCR and beyond.</p>
+<p class="para">Choose our 55 Seater Bus for reliable, comfortable, and enjoyable group transportation backed by excellent service and experienced drivers.</p>
 
-                <h1 class="title h-left">Tempo Traveller 9 Seater on Rent</h1>
-<p class="para">The Tempo Traveller  Seater is ideal for comfortable, safe, and spacious group journeys. Perfect for family vacations, office trips, sightseeing tours, and pilgrimages, this luxury mini-van provides plush seating, modern amenities, and unmatched reliability for Indian roads.</p>
-<p class="para">With professional chauffeurs, sanitized interiors, and regular maintenance, our 9-seater tempo traveller ensures a smooth and memorable travel experience. The vehicle offers ample luggage space, versatile adaptability, and advanced safety features to suit all travel needs in Delhi NCR and beyond.</p>
 <div class="col-12 col-lg-6 col-md-6">
-    <img src="img/t2.jpeg" width="70%" alt="Tempo Traveller 9 Seater"
+    <img src="img/seat55.jpeg" width="100%" alt="55 Seater Bus"
          class="img-responsive center-block mb20">
 </div>
-<p class="para">At HSR Travel Delhi, Tempo Traveller  Seater is available at competitive per-kilometer rates for stress-free, budget-friendly travel. Whether for group tours, family events, corporate outings, or holiday trips, this vehicle delivers the best comfort and service in its class.</p>
+<div class="col-12 col-lg-6 col-md-6">
+    <img src="img/seat545.jpeg" width="34%" alt="55 Seater Bus"
+         class="img-responsive center-block mb20">
+</div>
 <h1 class="title h-center">
-    <center>Features Of Hiring Tempo Traveller  Seater:</center>
+    <center>Features Of Hiring a 55 Seater Bus:</center>
 </h1>
 <style>
     {
@@ -574,56 +578,38 @@
 <div class="row">
     <div class="column" style="background-color: ;">
         <ul class="disc">
-            <li>9-seater luxury Maharaja seats</li>
-            <li>Digital air-conditioning control</li>
-            <li>LED ambient lights & music system</li>
-            <li>Charging points for all passengers</li>
-            <li>Large panoramic windows</li>
-            <li>Ample luggage space</li>
+            <li>Cushioned seating for 55 passengers</li>
+            <li>Air-conditioning and heating system</li>
+            <li>Large windows with curtains and shades</li>
+            <li>Ample storage space for luggage</li>
+            <li>Advanced audio and video entertainment</li>
         </ul>
     </div>
     <div class="column" style="background-color: ;">
         <ul class="disc">
-            <li>Full safety seat belts</li>
-            <li>First aid box & fire extinguisher</li>
-            <li>Sanitized, well-maintained vehicle</li>
-            <li>Experienced chauffeur</li>
-            <li>No insurance fees</li>
+            <li>Seat belts and safety features for all passengers</li>
+            <li>First aid kit and fire extinguisher included</li>
+            <li>Sanitized and regularly serviced vehicle</li>
+            <li>Professional and courteous chauffeurs</li>
+            <li>No hidden fees or insurance costs</li>
         </ul>
     </div>
 </div>
 <h1 class="title h-center">
-    <center>Terms & conditions for booking:</center>
+    <center>Terms & Conditions for Booking</center>
 </h1>
 <div class="row">
     <div class="column" style="background-color: ;">
-        <h3>Tempo Traveller  Seater Charges for Delhi City –</h3>
+        <h3>General Booking Terms –</h3>
         <ul class="disc">
-            <li>A/C & Non A/C @ ₹2,800/day</li>
-            <li>Time and Distance calculated from base point Saket</li>
-            <li>After 80 kilometers: ₹24/KM, after 8 hours: ₹200/hour</li>
-            <li>Minimum billing: 250 km/day</li>
-            <li>Toll tax, parking, state tax charged as actuals</li>
-            <li>Above price is only for Delhi circle</li>
-        </ul>
-    </div>
-    <div class="column" style="background-color: ;">
-        <h3>Tempo Traveller  Seater Charges for out of Delhi –</h3>
-        <ul class="disc">
-            <li>A/C & Non A/C @ ₹27/KM</li>
-            <li>Minimum kilometer counted per day: 250 km/day</li>
-            <li>Time and kilometers calculated Delhi to Delhi</li>
-            <li>Driver allowance ₹500/day</li>
-            <li>Toll tax, state tax, parking as actuals</li>
+            <li>Minimum booking duration applies</li>
+            <li>Time and distance calculated from base point Saket</li>
+            <li>Toll tax, parking, and state tax charged as actuals</li>
+            <li>Driver allowance as per trip requirements</li>
+            <li>Prices depend on availability and seasonal demand</li>
         </ul>
     </div>
 </div>
-
-
-
-                
-
-
 
                 <div class="dc-carousel">
                     <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
