--- a/tampu-26seat.html
+++ b/tampu-26seat.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="no-padding">
                     <!-- Navbar -->
-                    <nav class="navbar navbar-default navbar-fixed-top" style="height:100px;">
+                     <nav class="navbar navbar-default navbar-fixed-top" style="height:100px;">
                         <div class="container">
                             <div class="navbar-header">
                                 <button type="button" data-target="#navbarCollapse" data-toggle="collapse"
@@ -93,6 +93,28 @@
                                             <li>
                                                 <a class="dropdown-item" href="tampu-26seat.html">26 Seater Tempo Traveller</a>
                                             </li>
+                                             <li>
+                                                <a class="dropdown-item" href="Urbania-12seat.html">12 Seater Urbania</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="Urbania-17seat.html">17 Seater Urbania</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="bus-21seat.html">21 Seater Bus</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="bus-27seat.html">27 Seater Bus</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="bus-45seat.html">45 Seater Bus</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="bus-49seat.html">49 Seater Mega Bus</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="bus-55seat.html">55 Seater Mega Bus</a>
+                                            </li>
+                                           
                                         </ul>
                                     </li>
                                     <li class="nav-item dropdown">
