--- a/fleets.html
+++ b/fleets.html
@@ -207,6 +207,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
