--- a/index-2.html
+++ b/index-2.html
@@ -60,7 +60,7 @@
 		<!-- Navbar -->
 	   <nav class="navbar navbar-default navbar-fixed-top" style="height:100px;">
                         <div class="container">
-                            <div class="navbar-header">
+                            <div class="navbar-header">b 
                                 <button type="button" data-target="#navbarCollapse" data-toggle="collapse"
                                     class="navbar-toggle">
                                     <span class="sr-only">Toggle navigation</span>
@@ -206,6 +206,26 @@
                                             <li>
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
                                             </li>
                                         </ul>
                                     </li>
