--- a/taxi-booking-on-rent.html
+++ b/taxi-booking-on-rent.html
@@ -178,6 +178,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -360,7 +380,7 @@
 		    	<h1 class="title h-left">Taxi Service in Delhi</h1>
 		    	<p class="para">HSR Travel Delhi is one of the most premium taxi services in Delhi, beloved by thousands of people of Delhi and across India. We are committed to offering the best quality <a href="taxi-booking-on-rent.html">taxi services</a> to our clients at an affordable cost.</p>
 		    	<p class="para">We at Pal <a href="car-rental-services.html">Car Rental</a> provide you excellent services for taxi booking on rent as per your needs and requirements. We have a wide range of cars ranging from luxury to mid-size cars, family cars, sedans, SUVs, MUVs, and many other cars required for a single purpose or for a trip to nearby tourists place in Delhi and North India.</p>
-		    	<p class="para">We are happy that clients from across India and Delhi, choose our <a href="car-hiring-services.html">car hire services</a> and taxi on rent to attend meetings, tours, wedding ceremonies or to visit places around Delhi and for pick up and drop facilities to the airport. We provide radio taxi in Delhi NCR, online taxi booking on rent facilities as well as you can directly call us on our office number +91-9999999999, which operates 24*7. You tell us your requirement and we will be happy to provide you the car as per your requirement at the most competitive market rate.</p>
+		    	<p class="para">We are happy that clients from across India and Delhi, choose our <a href="car-hiring-services.html">car hire services</a> and taxi on rent to attend meetings, tours, wedding ceremonies or to visit places around Delhi and for pick up and drop facilities to the airport. We provide radio taxi in Delhi NCR, online taxi booking on rent facilities as well as you can directly call us on our office number +91 -8130336867, which operates 24*7. You tell us your requirement and we will be happy to provide you the car as per your requirement at the most competitive market rate.</p>
 			    <h3>Benefits of Taxi Services in Delhi:</h3>
 			    <ul class="disc">
 			        <li>Gives you privacy and a peaceful journey</li>
@@ -374,7 +394,7 @@
 			    </ul>
 			    <h3>Why choose HSR Travel Delhis HSR Travel Delhi taxi services?</h3>
 			    <p class="para">HSR Travel Delhi taxi services will offer more leisure and flexible taxi hiring experience. We are very well aware of the truth that our clients want the most reliable taxi service, which saves both their money and time. Our main objective is to provide safety, comfort, and reliability, and a hassle-free travel journey.</p>
-			    <p class="para">You can also fill up the query form on our website and send it to us. Our representative will call you and provide you with all the related information for taxi booking. Our representative will also arrange the cars as per your requirements and send them to your location as per your timing. For any assistance and services call us at +91-9999999999</p>
+			    <p class="para">You can also fill up the query form on our website and send it to us. Our representative will call you and provide you with all the related information for taxi booking. Our representative will also arrange the cars as per your requirements and send them to your location as per your timing. For any assistance and services call us at +91 -8130336867</p>
 			 		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
 <div class="owl-carousel owl-theme">
@@ -777,7 +797,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
