--- a/car-hiring-services.html
+++ b/car-hiring-services.html
@@ -178,6 +178,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -774,7 +794,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
