--- a/corporate-taxi-services.html
+++ b/corporate-taxi-services.html
@@ -180,6 +180,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -512,7 +532,7 @@
 				</style>
 		            <button class="accordion">1.	How can I rent a corporate cab or taxi in Delhi?</button>
 				<div class="panel">
-  					<p class="para">You can rent corporate car in Delhi either by booking online on HSR Travel Delhi’s website or by calling us on <a href="contact-us.html">+91-9999999999</a>.</p>
+  					<p class="para">You can rent corporate car in Delhi either by booking online on HSR Travel Delhi’s website or by calling us on <a href="contact-us.html">+91 -8130336867</a>.</p>
 				</div>
 
 				<button class="accordion">2.	How much does it cost to rent corporate cab at HSR Travel Delhi?</button>
@@ -522,7 +542,7 @@
 
 				<button class="accordion">3.	How much does it cost to rent corporate cab and taxi in Delhi?</button>
 				<div class="panel">
-  					<p class="para">For long term renting corporate cab and taxi in Delhi, for a week or month, kindly get in touch with our customer support team on +91-9999999999. We will assist you with best service and corporate cab package.</p>
+  					<p class="para">For long term renting corporate cab and taxi in Delhi, for a week or month, kindly get in touch with our customer support team on +91 -8130336867. We will assist you with best service and corporate cab package.</p>
 				</div>
 				<script>
 				var acc = document.getElementsByClassName("accordion");
@@ -540,7 +560,7 @@
 				  });
 				}
 				</script>
-                <p class="para">HSR Travel Delhi provides you an easy online platform to hire corporate car rental choices at a very competitive price from the market. To book the car you will need to visit our website or call our support number <a href="contact-us.html">+91-9999999999</a> and decide about your corporate travel plan, pickup location, and car type. You can use HSR Travel Delhi to pick the preferred car that is best for your travel need. For instance, choose a small car that can zip you through the city traffic in Delhi, or a spacious SUV for an outstation journey such as for a drive from Delhi to Agra or Delhi to Mathura, Vrindavan.</p>
+                <p class="para">HSR Travel Delhi provides you an easy online platform to hire corporate car rental choices at a very competitive price from the market. To book the car you will need to visit our website or call our support number <a href="contact-us.html">+91 -8130336867</a> and decide about your corporate travel plan, pickup location, and car type. You can use HSR Travel Delhi to pick the preferred car that is best for your travel need. For instance, choose a small car that can zip you through the city traffic in Delhi, or a spacious SUV for an outstation journey such as for a drive from Delhi to Agra or Delhi to Mathura, Vrindavan.</p>
 		    	
 			    <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
@@ -945,7 +965,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
