--- a/delhi-to-agra-taxi.html
+++ b/delhi-to-agra-taxi.html
@@ -182,6 +182,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -384,7 +404,7 @@
 		            <li>With an online booking method, you can book your rental car online from anywhere and at any time.</li>
 		            <li>Before booking a cab online always ensure that you’re booking it from a verified website to avoid frauds.</li>
 		        </ul>
-                    <p class="para">Book your next trip to Agra to witness the beauty of the Taj Mahal with HSR Travel Delhi <a href="car-rental-services.html">car rental service</a> provider, call us on +91-9999999999.</p>
+                    <p class="para">Book your next trip to Agra to witness the beauty of the Taj Mahal with HSR Travel Delhi <a href="car-rental-services.html">car rental service</a> provider, call us on +91 -8130336867.</p>
 		    	
 		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
@@ -789,7 +809,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
