--- a/delhi-to-badrinath-taxi.html
+++ b/delhi-to-badrinath-taxi.html
@@ -180,6 +180,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -361,7 +381,7 @@
 	    	<div class="container">
 		    	<h1 class="title h-left">Delhi to Badrinath Taxi</h1>
 		    	<p class="para">Badrinath is one of the oldest holy places of Hindus dedicated to Lord Vishnu and it is also one of the 108 Divya Desams or holy shrines of Vaishnavities. It is a holy town situated at the bank of the Alakhnanda River in the Chamoli district in Uttarakhand, India. It is one of India’s Char Dhams and has got its name from the holy temple of Badrinath. Apart from the other three Dhams, Badrinath is the only Dham that is considered as the Mokshadham.  If you are planning to visit this beautiful holy place the best way is to <a href="car-hiring-services.html">hire a car rental service</a>, as driving on the hills needs perfection and a trained chauffer.</p>
-		    	<p class="para">At HSR Travel Delhi you will get the best offers for your Delhi to Badrinath cab package. The cab packages at HSR Travel Delhi are affordable, include reasonable pricing without any hidden charges. You can avail of the package depending on the itinerary available. In case you have any queries regarding the rates or packages HSR Travel Delhi charges, do not hesitate to call us on 91-9999999999. We are available 24X7 to assist you.</p>
+		    	<p class="para">At HSR Travel Delhi you will get the best offers for your Delhi to Badrinath cab package. The cab packages at HSR Travel Delhi are affordable, include reasonable pricing without any hidden charges. You can avail of the package depending on the itinerary available. In case you have any queries regarding the rates or packages HSR Travel Delhi charges, do not hesitate to call us on 91 -8130336867. We are available 24X7 to assist you.</p>
 		        <h5>FAQs on Delhi to Badrinath Cabs</h5>
 		        <style>
 				.accordion {
@@ -852,7 +872,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
