--- a/delhi-to-chandigarh-taxi.html
+++ b/delhi-to-chandigarh-taxi.html
@@ -180,6 +180,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -406,7 +426,7 @@
 		    	<p class="para">Chandigarh is a prestigious city and a beautiful tourist destination in India. It is famous for its architecture, quality of life, clean roads, and greenery. Chandigarh is a  tourism paradise with beautiful lakes like Sukhna and gardens like Rock garden, Rose garden, and architectural marvel Capitol Complex. Choosing a rental car from Delhi to Chandigarh is the most suitable way to explore the beautiful city. The distance between Delhi and Chandigarh is around 250 kilometers via NH44 road.</p>
 		    	<h5>Delhi to Chandigarh Tour:-</h5>
 		    	<p class="para">Book an online cab from Delhi to Chandigarh and get the best affordable package from HSR Travel Delhi. We offer a variety of rental cars to our customers including a hatchback, Sedan, Muvs & SUVs for a more comfortable and smoother journey. Moreover, HSR Travel Delhi chauffeurs are well-trained, experienced, and ensure that you have a hassle-free journey.</p>
-			    <p class="para">We at HSR Travel Delhi offer fully customizable one-way, one-day and multi-day packages from Delhi to Chandigarh. Visit our page for complete information about our <a href="car-rental-services.html">car rental</a> packages. You can also call our customer service number at +91-9999999999 to avail exciting discounts and seasonal offers on your customized packages. Book Delhi to Chandigarh. HSR Travel Delhi <a href="cab-booking.html">Cab services</a> for a comfortable and safe ride.</p>
+			    <p class="para">We at HSR Travel Delhi offer fully customizable one-way, one-day and multi-day packages from Delhi to Chandigarh. Visit our page for complete information about our <a href="car-rental-services.html">car rental</a> packages. You can also call our customer service number at +91 -8130336867 to avail exciting discounts and seasonal offers on your customized packages. Book Delhi to Chandigarh. HSR Travel Delhi <a href="cab-booking.html">Cab services</a> for a comfortable and safe ride.</p>
 			    		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
 <div class="owl-carousel owl-theme">
@@ -809,7 +829,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
