--- a/delhi-to-mussoorie-taxi.html
+++ b/delhi-to-mussoorie-taxi.html
@@ -180,6 +180,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -375,7 +395,7 @@
 		            <li>Paperless & GST compliant transparent billing process without any hidden Charges.</li>
 		            <li>HSR Travel Delhis track record of on-time service. Our call Centre will always in touch with you to ensure no delays while traveling.</li>
 		        </ul>
-                    <p class="para">The best way to reach Mussoorie is to travel by road via Delhi to Mussoorie taxi service with HSR Travel Delhi as there is no airport or railway connectivity to the city. So if you’re planning to visit this beautiful city then immediately get in touch with HSR Travel Delhi for Delhi to Mussoorie <a href="cab-booking.html">cab services</a>. We will offer are very punctual, transparent, reasonable rate and on time car rental service. We understand the need and requirement of our customer ensuring safety and comfortable journey.<br><br>So now what are you waiting for book your memorable trip with HSR Travel Delhi by giving a call on +91-9999999999.</p>
+                    <p class="para">The best way to reach Mussoorie is to travel by road via Delhi to Mussoorie taxi service with HSR Travel Delhi as there is no airport or railway connectivity to the city. So if you’re planning to visit this beautiful city then immediately get in touch with HSR Travel Delhi for Delhi to Mussoorie <a href="cab-booking.html">cab services</a>. We will offer are very punctual, transparent, reasonable rate and on time car rental service. We understand the need and requirement of our customer ensuring safety and comfortable journey.<br><br>So now what are you waiting for book your memorable trip with HSR Travel Delhi by giving a call on +91 -8130336867.</p>
 		    	
 			   		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
@@ -779,7 +799,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
