--- a/delhi-to-rishikesh-taxi.html
+++ b/delhi-to-rishikesh-taxi.html
@@ -180,6 +180,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -377,7 +397,7 @@
 		            <li>At HSR Travel Delhi we regularly clean and sanitized all our vehicles for better comfort and safe journey to our customer.</li>
 		            <li>We offer a wide range of vehicles at HSR Travel Delhi including budget outstation car and luxury cars like Toyota Innova Crysta, Maruti Swift Dzire Taxi, Toyota Innova Taxi, Maruti Suzuki Dzire Taxi, Tata Indigo Taxi, Tata Indica Taxi, Honda City Taxi, Toyota Camery Taxi, Tata Tiago Taxi, Honda Mobilio Taxi, Ford Ecosport Taxi, and other popular cars.</li>
 		        </ul>
-                    <p class="para">We at HSR Travel Delhi offer fully customizable one-way, one-day and multi-day packages from Delhi to Rishikesh. Visit our page for complete information about our <a href="car-rental-services.html">car rental</a> offerings. You can also call our customer service number at +91-9999999999 to specify above to avail exciting discounts and seasonal offers on your customized packages. Book Delhi-Rishikesh HSR Travel Delhi Cab services for a comfortable and safe ride.</p>
+                    <p class="para">We at HSR Travel Delhi offer fully customizable one-way, one-day and multi-day packages from Delhi to Rishikesh. Visit our page for complete information about our <a href="car-rental-services.html">car rental</a> offerings. You can also call our customer service number at +91 -8130336867 to specify above to avail exciting discounts and seasonal offers on your customized packages. Book Delhi-Rishikesh HSR Travel Delhi Cab services for a comfortable and safe ride.</p>
 		    	
 			    		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
@@ -781,7 +801,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
