--- a/delhi-to-shimla-taxi.html
+++ b/delhi-to-shimla-taxi.html
@@ -181,6 +181,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -408,7 +428,7 @@
 		    	<p class="para">Shimla is the most beautiful city for vacation and tourist destination in India. Shimla has a rich heritage with mystical woods, magical mountains, and gorgeous lakes making it the top trending destination to visit at least once. Choosing a rental car from Delhi to Shimla is the most suitable way to explore various tourist spots and cherish the beauty of Shimla with your loved ones. The Distance from Delhi to Shimla is 343 kilometers and it will take around 7 to 8 hours to reach the destination.</p>
 		    	<h5>Delhi to Shimla Tour:-</h5>
 		    	<p class="para">Make your road trip from Delhi to Shimla memorable and comfortable with HSR Travel Delhi. Avail of the best affordable package on Delhi to Shimla cabs on HSR Travel Delhis. Our chauffeurs are well-trained, experienced, and polite to make your journey hassle-free and beautiful. We offer a variety of car rental services like a hatchback, Sedan, Muvs & SUVs to our customers for a better and smooth journey.</p>
-		    	<p class="para">We at HSR Travel Delhi offer fully customizable one-way, one-day and multi-day packages from Delhi to Shimla. Visit our Website for more information about our <a href="car-rental-services.html">car rental</a> packages. You can also call our customer service number at +91-9999999999 to specify above to avail exciting discounts and seasonal offers on your customized packages. Book Delhi-Shimla HSR Travel Delhi Cab services for a comfortable and safe Journey.</p>
+		    	<p class="para">We at HSR Travel Delhi offer fully customizable one-way, one-day and multi-day packages from Delhi to Shimla. Visit our Website for more information about our <a href="car-rental-services.html">car rental</a> packages. You can also call our customer service number at +91 -8130336867 to specify above to avail exciting discounts and seasonal offers on your customized packages. Book Delhi-Shimla HSR Travel Delhi Cab services for a comfortable and safe Journey.</p>
 			    		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
 <div class="owl-carousel owl-theme">
@@ -811,7 +831,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
