--- a/local-taxi-service.html
+++ b/local-taxi-service.html
@@ -181,6 +181,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -438,7 +458,7 @@
 				<button class="accordion">3.    Which is the most economical cab available in Delhi?</button>
 				<div class="panel">
   					<p class="para">At HSR Travel Delhi, most of the rental cars are economical and affordable as well, but you can always go for local car rental Swift Dzire without having a single doubt as it is the most popular and demanding in comparison to other.
-                                    You can also fill up the query form on our website and send it to us. Our representative will call you and provide you with all the related information for taxi booking. Our representative will also arrange the cars as per your requirements and send it to your location as per your timing. For any assistance and services call us at +91-9999999999.
+                                    You can also fill up the query form on our website and send it to us. Our representative will call you and provide you with all the related information for taxi booking. Our representative will also arrange the cars as per your requirements and send it to your location as per your timing. For any assistance and services call us at +91 -8130336867.
                     </p>
 				</div>
 				<script>
@@ -457,7 +477,7 @@
 				  });
 				}
 				</script>
-                <!--<p class="para">HSR Travel Delhi provides you an easy online platform to hire corporate car rental choices at a very competitive price from the market. To book the car you will need to visit our website or call our support number +91-9999999999 and decide about your corporate travel plan, pickup location, and car type. You can use HSR Travel Delhi to pick the preferred car that is best for your travel need. For instance, choose a small car that can zip you through the city traffic in Delhi, or a spacious SUV for an outstation journey such as for a drive from Delhi to Agra or Delhi to Mathura, Vrindavan.</p>-->
+                <!--<p class="para">HSR Travel Delhi provides you an easy online platform to hire corporate car rental choices at a very competitive price from the market. To book the car you will need to visit our website or call our support number +91 -8130336867 and decide about your corporate travel plan, pickup location, and car type. You can use HSR Travel Delhi to pick the preferred car that is best for your travel need. For instance, choose a small car that can zip you through the city traffic in Delhi, or a spacious SUV for an outstation journey such as for a drive from Delhi to Agra or Delhi to Mathura, Vrindavan.</p>-->
 		    	
 			 		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
@@ -862,7 +882,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
