--- a/monthly-car-rental-services.html
+++ b/monthly-car-rental-services.html
@@ -180,6 +180,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -461,7 +481,7 @@
                         <li>Variety of vehicles</li>
                     </ul>
                     <p class="para">We provide affordable and budget-friendly car rental on a monthly basis. You can also avail of discounts and coupons and save on business travel through our special customized fares.</p>
-		    	<p class="para">With HSR Travel Delhi book your long-term car rentals in Delhi or any other region/state/ city [one way, roundtrip, and multi city], you can call us on +91-9999999999 anytime for booking or queries.</p>
+		    	<p class="para">With HSR Travel Delhi book your long-term car rentals in Delhi or any other region/state/ city [one way, roundtrip, and multi city], you can call us on +91 -8130336867 anytime for booking or queries.</p>
 			    		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
 <div class="owl-carousel owl-theme">
@@ -864,7 +884,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
