--- a/outstation-car-service.html
+++ b/outstation-car-service.html
@@ -180,6 +180,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -392,7 +412,7 @@
                     <li>Pilgrimage tours</li>
                     <li>One way taxi service</li>
                 </ul>
-                <p class="para">Pal Car rental provides cars on rent at an affordable rate for Haridwar tour, We have a wide range of cars like Innova car, Sedan, hatchback, SUVs & MUVs cars depending upon your budget. Book your taxi on rent at the best price to make your journey memorable forever. Pal car rental ensures the best car rental services for any type of tour with reliable services, just simply call us on +91-9999999999 to hire outstation taxi & cabs for your next tour.</p>
+                <p class="para">Pal Car rental provides cars on rent at an affordable rate for Haridwar tour, We have a wide range of cars like Innova car, Sedan, hatchback, SUVs & MUVs cars depending upon your budget. Book your taxi on rent at the best price to make your journey memorable forever. Pal car rental ensures the best car rental services for any type of tour with reliable services, just simply call us on +91 -8130336867 to hire outstation taxi & cabs for your next tour.</p>
 		    	
 			  		 <div class="dc-carousel">
 			    	 <!-- <h2 class="title">Simiar Cars on Rent</h2> -->
@@ -797,7 +817,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
