--- a/swift-dzire-car-on-rent.html
+++ b/swift-dzire-car-on-rent.html
@@ -182,6 +182,26 @@
                                                 <a class="dropdown-item" href="outstation-car-service.html">Outstation
                                                     Car Service</a>
                                             </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-goldentriangle-taxi-services.html">
+                                                    Golden Triangle Agra Jaipur Delhi Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-billingdalhouji-taxi-services.html">
+                                                    birbilling dalhouji delhi tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-mussoorie-taxi.html">
+                                                    Delhi Massourie Tour
+                                                </a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="delhi-to-dharmshalatomcnld-taxi-services.html">
+                                                    Dharamshala McLeodganj Delhi Tour
+                                                </a>
+                                            </li>
                                         </ul>
                                     </li>
                                     <li class="nav-item">
@@ -372,7 +392,7 @@
 
 				</div>
 				<p class="para ">If you are looking for a comfortable sedan car on rent then, Swift Dzire is perfect. It will offer a comfortable journey or road trip, be it for group tours, family tours, business travel, or going to any location for corporate meetings, business meet-ups, or visiting tourist destinations.</p>
-		    	<p class="para">At HSR Travel Delhi <a href="car-rental-services.html">car rental services</a>, We offer Premium Cars on rent along with Swift Dzire on rent for Delhi and Outstation package tours for various places including Manali, Shimla, Nainital, Haridwar, Rishikesh, Jaipur, Badrinath, and so many famous destinations and the pilgrimage spot.  For booking, Swift Dzire car on rent calls us at +91-9999999999. In case of any doubt and queries feel free to reach us anytime, we will be happy to serve you.</p>
+		    	<p class="para">At HSR Travel Delhi <a href="car-rental-services.html">car rental services</a>, We offer Premium Cars on rent along with Swift Dzire on rent for Delhi and Outstation package tours for various places including Manali, Shimla, Nainital, Haridwar, Rishikesh, Jaipur, Badrinath, and so many famous destinations and the pilgrimage spot.  For booking, Swift Dzire car on rent calls us at +91 -8130336867. In case of any doubt and queries feel free to reach us anytime, we will be happy to serve you.</p>
 		    	
 				<h1 class="title h-center mt-5" style="margin-top: 100px;"><center>Features of Hiring Maruti Swift Dzire:<center></h1>
 		    	<style>
@@ -838,7 +858,7 @@ $(document).ready(function () {
 }
 
 </style>
-<!--<a href="tel:+91-9999999999" class="sticky-call">Call +91-9999999999</a>-->
+<!--<a href="tel:+91 -8130336867" class="sticky-call">Call +91 -8130336867</a>-->
 	    </footer>
 	    <div class="fixed-feedback rotated">
     <a href="https://api.whatsapp.com/send?phone=919999999999&amp;text=I%20want%20to%20book%20a%20car.">
